--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,9 +1,11 @@
 // Apply a natural box layout model to all elements
 // but allowing components to change
 // http://www.paulirish.com/2012/box-sizing-border-box-ftw/
-html {
-    box-sizing: border-box;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
+@import 'reset.scss';
+
+html, body, #game {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
 }
