--- a/index.ejs
+++ b/index.ejs
@@ -6,9 +6,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <div class="content">
-        <h1>Webpack Boilerplate</h1>
-        <h3>Replace this page with your own code</h3>
+    <div id="game">
     </div>
 </body>
 </html>
