--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,3 +9,16 @@ html, body, #game {
     overflow: hidden;
     position: relative;
 }
+
+#words-input {
+    position: fixed;
+    bottom: 20%;
+    width: 50%;
+    left: 50%;
+    padding: 0 20px;
+    font-size: 30px;
+    transform: translateX(-50%);
+    max-width: 500px;
+    height: 60px;
+    line-height: 60px;
+}
