Speed constants and calculcation refactored

--- a/index.ejs
+++ b/index.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="game">
-        <input type="text" id="words-input">
+        <input type="text" id="words-input" autofocus>
     </div>
 </body>
 </html>
