--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,24 +1,160 @@
 // Apply a natural box layout model to all elements
 // but allowing components to change
 // http://www.paulirish.com/2012/box-sizing-border-box-ftw/
-@import 'reset.scss';
+@import "reset.scss";
 
-html, body, #game {
+html,
+body,
+#game {
     width: 100%;
     height: 100%;
     overflow: hidden;
     position: relative;
+    box-sizing: border-box; 
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background: #000;
+}
+
+.button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background: darkred;
+    color: #fff;
+    font-size: 24px;
+}
+
+.hidden {
+    display: none !important;
+}
+
+.shake {
+    animation: shake 0.5s cubic-bezier(.36,.07,.19,.97);
 }
 
 #words-input {
-    position: fixed;
-    bottom: 20%;
     width: 50%;
-    left: 50%;
-    padding: 0 20px;
+    padding: 5px 20px;
     font-size: 30px;
-    transform: translateX(-50%);
-    max-width: 500px;
     height: 60px;
     line-height: 60px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    border-radius: 40px;
+    outline: none;
+    background: rgba(0, 0, 0, 0.75);
+    border: 3px solid #fff;
+    color: #fff;
+}
+
+#game-controls {
+    position: fixed;
+    width: 100%;
+    top: 45%;
+    text-align: center;
+    animation: fadein 1s;
+    #status-bar {
+        padding-top: 40px;
+        font-size: 30px;
+        width: 50%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+    }
+    #score {
+        color: #fff;
+    }
+    #lifepoints {
+        color: darkred;
+        .heart {
+            margin: 0 4px;
+        }
+    }
+}
+
+#game-over,
+#game-init {
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    z-index: 10;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box;
+    .button {
+        margin-top: 20px;
+    }
+}
+
+#game-over {
+    padding: 0 20px;
+    background: rgba(0, 0, 0, 0.5);
+    animation: fadein 1s;
+    h1 {
+        font-size: 40px;
+        margin-bottom: 20px;
+        max-width: 300px;
+    }
+}
+
+#game-init {
+    background: #000;
+    padding: 0 20px;
+    p {
+        margin: 30px 0 10px;
+        color: silver;
+    }
+    h1 {
+        line-height: 38px;
+        font-size: 34px;
+        max-width: 300px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 700px) {
+    #game-controls {
+        #status-bar {
+            display: block;
+            #score {
+                display: block;
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes shake {
+    10%,
+    90% {
+        transform: translate3d(-13px, 0, 0);
+    }
+
+    20%,
+    80% {
+        transform: translate3d(12px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-6px, 0, 0);
+    }
+
+    40%,
+    60% {
+        transform: translate3d(6px, 0, 0);
+    }
 }
