--- a/index.ejs
+++ b/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>TypingNinja</title>
 </head>
 <body>
     <div id="game">
