--- a/index.ejs
+++ b/index.ejs
@@ -10,15 +10,18 @@
         <div id="game-init">
             <div>
                 <h1>Type words in Chinese or pinyin and score points</h1>
-                <p>It's that simple</p>
-                <button class="button" data-control="restart">I'm ready</button>
+                <p>It's that simple. Choose your difficulty.</p>
+                <button class="button green" data-control="restart" data-mode="waiguoren">Waiguoren</button>
+                <button class="button red" data-control="restart" data-mode="normal">Normal</button>
             </div>
         </div>
         <div id="game-over" class="hidden">
             <div>
                 <h1>Game over</h1>
                 <p>You scored <span id="game-over-score" data-display="score"></span> points</p>
-                <button class="button" data-control="restart">Restart</button>
+                <p>Restart?</p>
+                <button class="button green" data-control="restart" data-mode="waiguoren">Waiguoren</button>
+                <button class="button red" data-control="restart" data-mode="normal">Normal</button>
             </div>
         </div>
         <div id="game-controls">
@@ -29,11 +32,6 @@
                     <span data-display="score"></span>
                 </span>
                 <span id="lifepoints" data-display="lives">
-                    <span class="heart">❤</span>
-                    <span class="heart">❤</span>
-                    <span class="heart">❤</span>
-                    <span class="heart">❤</span>
-                    <span class="heart">❤</span>
                 </span>
             </div>
         </div>
