--- a/index.ejs
+++ b/index.ejs
@@ -10,7 +10,7 @@
         <div id="game-init">
             <div>
                 <h1>Type words in Chinese or pinyin and score points</h1>
-                <p>It's that simple. Choose your difficulty.</p>
+                <p>Choose your difficulty.</p>
                 <button class="button green" data-control="restart" data-mode="waiguoren">Waiguoren</button>
                 <button class="button red" data-control="restart" data-mode="normal">Normal</button>
             </div>
